[package]
name = "air001-hal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HAL for Air001 microcontroller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air001-pac = "0.0.2"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
fugit = "0.3.7"
embedded-hal = { version = "0.2", features = ["unproven"] }
